--- a/assets/main.scss
+++ b/assets/main.scss
@@ -9,20 +9,23 @@
   margin: 0 auto;
 }
 
-/* título de la cabecera */
+/* intro justificada */
+.home-intro p {
+  text-align: justify;
+}
+
+/* título del sitio en la barra superior */
 .site-title {
   font-weight: 700;
   letter-spacing: 0.08em;
   text-transform: uppercase;
 }
 
-/* descripción de inicio */
-.home .page-heading {
-  font-size: 2rem;
-  margin-bottom: 1.5rem;
+/* cards para los posts */
+.post-list {
+  padding-left: 0;
 }
 
-/* cards para los posts */
 .post-list > li {
   list-style: none;
   margin: 0 0 1.5rem 0;
@@ -37,7 +40,7 @@
 }
 
 .post-card .post-meta {
-  font-size: 0.85rem;
+  font-size: 0.8rem;
   text-transform: uppercase;
   letter-spacing: 0.08em;
   color: #999;
@@ -52,7 +55,6 @@
   margin-bottom: 0;
 }
 
-/* link “leer más” */
 .read-more {
   display: inline-block;
   margin-top: 0.75rem;
