--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -89,7 +89,7 @@ layout: default
   <section class="home-explore" id="explorar-temas">
     <div class="home-explore-header">
       <h2>Explorar temas</h2>
-      <p>Cuadernos principales, directo al grano.</p>
+      <p>Cuadernos principales.</p>
     </div>
     <ul class="home-link-list">
       {% assign category_pages = site.pages | where: "layout", "category" | sort: "title" %}
